try to fixing backdrop but positioning and z-index falied

--- a/Problem-Solver/src/styles/home.scss
+++ b/Problem-Solver/src/styles/home.scss
@@ -1,10 +1,9 @@
-@import "variable.scss";
+@import "./variable.scss";
 .home{
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
     &__button{
         border-radius: 8px;
         color: black;
@@ -17,6 +16,8 @@
         gap: 10px;
         align-items: center;
         justify-content: center;
+        position: relative;
+        z-index: 1;
     }
 }
 .name{
